# LearnFFmpeg

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/learnffmpeg/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  com_example_learnffmpeg_config_ConfigInfo.cpp  com_example_learnffmpeg_config_ConfigInfo.h  ffmpeg_play_video.cpp  log_util.h
app/src/main/cpp/include/libavutil/: ffversion.h
app/src/main/java/com/example/learnffmpeg/: MainActivity.kt
app/src/main/java/com/example/learnffmpeg/config/: ConfigInfo.java  FFmpegConfigInfoActivity.kt
app/src/main/res/layout/: activity_ffmpeg_config_info.xml  activity_main.xml
app/src/test/java/com/example/learnffmpeg/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
